updated pom switch to testng added allure